fix: remove the black backround covering the initial video.

--- a/lplan-web/src/pages/home.page/home.page.css
+++ b/lplan-web/src/pages/home.page/home.page.css
@@ -10,6 +10,7 @@
     font-family: "Raffaella", sans-serif;
     color: #fff;
     font-size: 72px;
+    z-index: 1;
  }
 
  .button { 
@@ -24,6 +25,7 @@
     width: 100px;
     cursor: pointer;
     text-align: center;
+    z-index: 1;
  }
 
  .button:hover {
@@ -44,8 +46,8 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh; /* ajustar altura en términos de viewport units */
-    z-index: -1;
+    height: 100vh;
+    z-index: 0;
   }
   
   video {
@@ -54,8 +56,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover; /* asegurarse de que el video se ajuste sin deformarse */
-    z-index: -1;
+    object-fit: cover;
+    z-index: 0;
   }
 
   .button-container {
